<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/StaticGyroBias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/gyro_bias"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MeasureAccel" />

    <TextView
        android:id="@+id/StaticGyroNoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/gyro_noise"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticGyroBias" />

    <TextView
        android:id="@+id/StaticAccelBias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/accel_bias"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticGyroNoise" />

    <TextView
        android:id="@+id/StaticAccelNoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/accel_noise"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticAccelBias" />

    <Button
        android:id="@+id/MeasureGyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:onClick="measureGyroBiasNoise"
        android:text="@string/measure_gyro"
        app:layout_constraintBottom_toBottomOf="@+id/MeasureAccel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/MeasureAccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="measureAccelBiasNoise"
        android:text="@string/measure_accel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/MeasureGyro"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PlotTiltGyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="plotTiltGyro"
        android:text="@string/plot_tilt_gyro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticAccelNoise" />

    <Button
        android:id="@+id/PlotTiltAccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="plotTiltAccel"
        android:text="@string/plot_tilt_accel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlotTiltGyro" />

    <Button
        android:id="@+id/PlotTiltComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="plotTiltComp"
        android:text="@string/plot_tilt_comp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlotTiltAccel" />

    <TextView
        android:id="@+id/StaticStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="32dp"
        android:text="@string/static_status_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlotTiltComp" />

    <TextView
        android:id="@+id/StaticTiltText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/static_tilt_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticStatusText" />

    <TextView
        android:id="@+id/TiltText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_tilt_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/StaticTiltText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/StaticTiltText" />

    <TextView
        android:id="@+id/StatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_none"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/StaticStatusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/StaticStatusText" />

    <TextView
        android:id="@+id/GyroBias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/zeros"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/StaticGyroBias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/StaticGyroBias" />

    <TextView
        android:id="@+id/AccelNoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/zeros"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/StaticAccelNoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/StaticAccelNoise" />

    <TextView
        android:id="@+id/AccelBias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/zeros"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/StaticAccelBias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/StaticAccelBias" />

    <TextView
        android:id="@+id/GyroNoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/zeros"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/StaticGyroNoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/StaticGyroNoise" />

    <Button
        android:id="@+id/MeasureTiltComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="measureTiltComp"
        android:text="@string/measure_tilt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StaticTiltText" />

</androidx.constraintlayout.widget.ConstraintLayout>